--- a/styles/services.css
+++ b/styles/services.css
@@ -1,130 +1,132 @@
 /* Header Section - Same as contact page */
 
 body {
-    background: linear-gradient(291deg, rgba(97, 171, 215, 0.70) 13%, rgba(86.47, 129.54, 191.31, 0.70) 39%, rgba(86.93, 131.33, 192.33, 0.70) 58%, rgba(81, 108, 179, 0.70) 78%);
+  background: linear-gradient(
+    291deg,
+    rgba(97, 171, 215, 0.7) 13%,
+    rgba(86.47, 129.54, 191.31, 0.7) 39%,
+    rgba(86.93, 131.33, 192.33, 0.7) 58%,
+    rgba(81, 108, 179, 0.7) 78%
+  );
 }
 .header-section {
-    position: relative;
-    min-height: 100svh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-bottom-left-radius: 40px;
-    border-bottom-right-radius: 40px;
-    overflow: hidden; /* Ensure that blurred image does not overflow */
-    background: #61ABD7;
-    z-index: -2;
 }
-
+.header-section-container {
+  position: relative;
+  min-height: 100svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+  overflow: hidden; /* Ensure that blurred image does not overflow */
+  background: #61abd7;
+  z-index: -2;
+}
 .header-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100svh;
-    background: url('../imgs/sample.jpg') no-repeat center center;
-    background-size: cover;
-    filter: blur(5px); /* Adjust the blur amount as needed */
-    z-index: -1; /* Place the image behind the content */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100svh;
+  background: url("../imgs/sample.jpg") no-repeat center center;
+  background-size: cover;
+  filter: blur(5px); /* Adjust the blur amount as needed */
+  z-index: -1; /* Place the image behind the content */
 }
 
 .header-content {
-    position: relative; /* Ensure this content is above the blurred image */
-    color: rgb(0, 0, 0);
-    padding: 20px;
+  position: relative; /* Ensure this content is above the blurred image */
+  color: rgb(0, 0, 0);
+  padding: 20px;
 }
 
 .header-content h1 {
-    font-size: 3rem;
-    font-weight: bold;
-    font-family: var(--hero-text-font);
+  font-size: 3rem;
+  font-weight: bold;
+  font-family: var(--hero-text-font);
 }
 
 .header-content button {
-    padding: 10px 30px;
-    font-size: 1.4rem;
-    border-radius: 30px;
-    background-color: transparent;
-    border: 2px solid rgb(0, 0, 0);
-    color: rgb(0, 0, 0);
-    margin-top: 20px;
-    cursor: pointer;
-    font-family: var(--second-main-font);
-    width: 60%;
+  padding: 10px 30px;
+  font-size: 1.4rem;
+  border-radius: 30px;
+  background-color: transparent;
+  border: 2px solid rgb(0, 0, 0);
+  color: rgb(0, 0, 0);
+  margin-top: 20px;
+  cursor: pointer;
+  font-family: var(--second-main-font);
+  width: 60%;
 }
 
 .header-content .cta {
-    color: rgb(0, 0, 0);
-    font-size: 1.2rem;
-    margin-top: 20px;
+  color: rgb(0, 0, 0);
+  font-size: 1.2rem;
+  margin-top: 20px;
 }
 
 .header-content .cta a {
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    font-family: var(--main-font);
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  font-family: var(--main-font);
 }
-
-
 
 /* Services Section */
 
 .services-section h2 {
-    font-size: 2.5rem;
-    font-weight: bold;
-    font-family: var(--hero-text-font);
-    text-align: center;
-    margin-bottom: 20px;
-    color: #24004d;
-    
+  font-size: 2.5rem;
+  font-weight: bold;
+  font-family: var(--hero-text-font);
+  text-align: center;
+  margin-bottom: 20px;
+  color: #24004d;
 }
 .card {
-    border: none;
-    border-radius: 22px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border: none;
+  border-radius: 22px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 /* Ensure all card images have padding around them and are centered */
 .card img {
-    width: calc(100% - 20px); /* Adjusting width to account for padding */
-    height: calc(200px - 10px); /* Adjusting height to account for padding */
-    object-fit: cover; /* Ensure the image fits inside without stretching */
-    padding: 20px; /* Padding from all sides */
-    border-radius: 30px;
-    
-    display: block; /* Block display to allow centering */
-    margin: 0 auto; /* Centers the image horizontally */
+  width: calc(100% - 20px); /* Adjusting width to account for padding */
+  height: calc(200px - 10px); /* Adjusting height to account for padding */
+  object-fit: cover; /* Ensure the image fits inside without stretching */
+  padding: 20px; /* Padding from all sides */
+  border-radius: 30px;
+
+  display: block; /* Block display to allow centering */
+  margin: 0 auto; /* Centers the image horizontally */
 }
 
 .card-body h5 {
-    font-weight: bold;
-    font-family: var(--main-font);
-    
+  font-weight: bold;
+  font-family: var(--main-font);
 }
 
 .card-body p {
-    color: #6c757d;
+  color: #6c757d;
 }
 
 .card-body .btn-block {
-    background-color: #61ABD7;
-    color: white;
-    font-size: 14px;
-    border-radius: 50px;
-    font-family: var(--main-font);
-    text-transform: uppercase;
+  background-color: #61abd7;
+  color: white;
+  font-size: 14px;
+  border-radius: 50px;
+  font-family: var(--main-font);
+  text-transform: uppercase;
 }
 
 .card-body .btn-outline-dark {
-    font-size: 12px;
-    padding: 5px 10px;
-    border-radius: 50px;
-    font-family: var(--main-font);
-    text-transform: uppercase;
-    
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 50px;
+  font-family: var(--main-font);
+  text-transform: uppercase;
 }
 
 .d-flex {
-    gap: 10px;
+  gap: 10px;
 }
